releases/0.1.6/docs/cpp/_sources/api/file__home_runner_work_sixtyfps_sixtyfps_api_sixtyfps-cpp_include_sixtyfps_string.h.rst.txt

.. _file__home_runner_work_sixtyfps_sixtyfps_api_sixtyfps-cpp_include_sixtyfps_string.h:

File sixtyfps_string.h
======================

|exhale_lsh| :ref:`Parent directory <dir__home_runner_work_sixtyfps_sixtyfps_api_sixtyfps-cpp_include>` (``/home/runner/work/sixtyfps/sixtyfps/api/sixtyfps-cpp/include``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. contents:: Contents
   :local:
   :backlinks: none

Definition (``/home/runner/work/sixtyfps/sixtyfps/api/sixtyfps-cpp/include/sixtyfps_string.h``)
-----------------------------------------------------------------------------------------------


.. toctree::
   :maxdepth: 1

   program_listing_file__home_runner_work_sixtyfps_sixtyfps_api_sixtyfps-cpp_include_sixtyfps_string.h.rst





Includes
--------


- ``sixtyfps_string_internal.h`` (:ref:`file_cppdocs_generated_include_sixtyfps_string_internal.h`)

- ``string_view``



Included By
-----------


- :ref:`file__home_runner_work_sixtyfps_sixtyfps_api_sixtyfps-cpp_include_sixtyfps_brush.h`

- :ref:`file__home_runner_work_sixtyfps_sixtyfps_api_sixtyfps-cpp_include_sixtyfps_image.h`

- :ref:`file_cppdocs_generated_include_sixtyfps_internal.h`




Namespaces
----------


- :ref:`namespace_sixtyfps`


Classes
-------


- :ref:`exhale_struct_structsixtyfps_1_1SharedString`

